--- a/src/main/ui/sidepanel.html
+++ b/src/main/ui/sidepanel.html
@@ -5,7 +5,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Jarvinion</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to your external CSS -->
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/sidepanel.css"> <!-- Link to your external CSS -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
 
